--- a/package.json
+++ b/package.json
@@ -7,24 +7,34 @@
   "author": "JB <jasonbenesch@gmail.com>",
   "private": true,
   "dependencies": {
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "prop-types": "^15.6.1",
+    "enzyme": "3.3.0",
+    "enzyme-adapter-react-16": "1.1.1",
+    "prop-types": "15.6.1",
     "react": "16.4.0",
     "react-dom": "16.4.0",
     "react-scripts": "1.1.4",
-    "react-test-renderer": "^16.4.0"
+    "react-test-renderer": "16.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "devDependencies": {
-    "husky": "^0.14.3",
-    "lint-staged": "^7.1.3",
-    "prettier": "^1.13.4"
+    "@storybook/addon-actions": "3.4.6",
+    "@storybook/addon-knobs": "3.4.6",
+    "@storybook/addon-links": "3.4.6",
+    "@storybook/addon-options": "3.4.6",
+    "@storybook/addons": "3.4.6",
+    "@storybook/react": "3.4.6",
+    "babel-core": "6.26.3",
+    "babel-runtime": "6.26.0",
+    "husky": "0.14.3",
+    "lint-staged": "7.1.3",
+    "prettier": "1.13.4"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json,css}": [
