--- a/package.json
+++ b/package.json
@@ -6,6 +6,17 @@
   "repository": "git@github.com:jbenesch/otis-payment-portal.git",
   "author": "JB <jasonbenesch@gmail.com>",
   "private": true,
+  "scripts": {
+    "analyze": "source-map-explorer build/static/js/main.*",
+    "precommit": "lint-staged",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "test:debug": "react-scripts --inspect-brk test --runInBand --env=jsdom",
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
+  },
   "dependencies": {
     "@blueprintjs/core": "2.3.1",
     "enzyme": "3.3.0",
@@ -19,14 +30,6 @@
     "react-test-renderer": "16.4.0",
     "react-transition-group": "2.3.1",
     "styled-components": "3.3.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
   },
   "devDependencies": {
     "@storybook/addon-actions": "3.4.6",
