--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
     "hedron": "0.7.1",
-    "normalize.css": "^8.0.0",
+    "normalize.css": "8.0.0",
     "prop-types": "15.6.1",
     "react": "16.4.0",
     "react-dom": "16.4.0",
+    "react-redux": "5.0.7",
     "react-scripts": "1.1.4",
     "react-test-renderer": "16.4.0",
     "react-transition-group": "2.3.1",
+    "redux": "4.0.0",
+    "redux-little-router": "15.1.1",
+    "redux-mock-store": "1.5.1",
     "styled-components": "3.3.2"
   },
   "devDependencies": {
