--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-test-renderer": "16.4.0",
     "react-transition-group": "2.3.1",
     "redux": "4.0.0",
+    "redux-act": "^1.7.4",
     "redux-little-router": "15.1.1",
     "redux-mock-store": "1.5.1",
     "styled-components": "3.3.2"
