--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-transition-group": "2.3.1",
     "redux": "4.0.0",
     "redux-act": "^1.7.4",
+    "redux-form": "^7.3.0",
     "redux-little-router": "15.1.1",
     "redux-mock-store": "1.5.1",
     "styled-components": "3.3.2"
