--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
     "hedron": "0.7.1",
-    "md5": "^2.2.1",
+    "md5": "2.2.1",
     "normalize.css": "8.0.0",
     "prop-types": "15.6.1",
     "react": "16.4.0",
@@ -32,11 +32,11 @@
     "react-test-renderer": "16.4.0",
     "react-transition-group": "2.3.1",
     "redux": "4.0.0",
-    "redux-act": "^1.7.4",
-    "redux-form": "^7.3.0",
+    "redux-act": "1.7.4",
+    "redux-form": "7.3.0",
     "redux-little-router": "15.1.1",
     "redux-mock-store": "1.5.1",
-    "redux-saga": "^0.16.0",
+    "redux-saga": "0.16.0",
     "styled-components": "3.3.2"
   },
   "devDependencies": {
@@ -54,7 +54,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json,css}": [
-      "prettier --single-quote --write",
+      "prettier --single-quote --no-semi --write",
       "git add"
     ]
   }
