--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
     "hedron": "0.7.1",
-    "jest-enzyme": "^6.0.1",
+    "jest-enzyme": "6.0.1",
     "md5": "2.2.1",
     "normalize.css": "8.0.0",
     "prop-types": "15.6.1",
